Fix: styles for tables in SQL lessons
Previously: table cells had no padding, which caused a visual collapse
(cell content was too close to cell neighbors). Table header rows had
dark blue background and black letters.  Tables had no space between
them and following paragraphs.

Changes:
* added 5px padding to cell contents
* changed header row background to gray-ish (I considered switching text
  color to white, but it didn't look good)
* 15px margin on the bottom of the tables (similarly to bottom margin
  used by paragraph style).

--- a/css/swc.css
+++ b/css/swc.css
@@ -466,6 +466,19 @@ section.content {
     font-size: 40pt;
 }
 
+thead .header {
+    background: rgba(0, 0, 0, 0.15);
+}
+
+table th, table td {
+    padding: 5px;
+}
+
+table {
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    margin-bottom: 15px;
+}
+
 #header-text {
     font-size:20pt;
     margin:0;
